--- a/project 3.html
+++ b/project 3.html
@@ -19,9 +19,9 @@
 </style>
     <script>
 
-        function convert(degrees) {
+        function convert(degree) {
             var x;
-            if (degrees == "C") {
+            if (degree == "C") {
                 x = document.getElementById('C').value * 9/5 + 32;
 
                 document.getElementById("F").value = Math.round(x);
