--- a/project 3.html
+++ b/project 3.html
@@ -22,7 +22,7 @@
         function convert(degree) {
             var x;
             if (degree == "C") {
-                x = document.getElementById('C').value * 9 / 5 + 32;
+                x = document.getElementById('C').value * 9 / 5 ;
 
                 document.getElementById("F").value = Math.round(x);
             }
